--- a/css avançado/flex/flex-order.html
+++ b/css avançado/flex/flex-order.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="flex-order.css">
 </head>
+
 <body>
     <h1>Exemplo do flex order</h1>
     <p>
-        <span class="negrito">Como funciona?</span>O valor padão <code>order</code>é <code>0</code>. Os itens com valores menores aparecem primeiro; maiores aparecem depois. Aqui, o item 3 tem <code>ordder: -1</code>, portanto aparece no inicio, mesmo estando por último no HTML.
+        <span class="negrito">Como funciona?</span>O valor padão <code>order</code>é <code>0</code>. Os itens com
+        valores menores aparecem primeiro; maiores aparecem depois. Aqui, o item 3 tem <code>ordder: -1</code>, portanto
+        aparece no inicio, mesmo estando por último no HTML.
     </p>
 
     <main>
         <div class="item item-1">Item 1 (order:2)</div>
-        <div class="item item-1">Item 2 (order:1)</div>
-        <div class="item item-1">Item 3 (order:-1)</div>
+        <div class="item item-2">Item 2 (order:1)</div>
+        <div class="item item-3">Item 3 (order:-1)</div>
     </main>
 </body>
+
 </html>
