Adicionado exemplo do flex grow

--- a/css avançado/flex/flex-grow.html
+++ b/css avançado/flex/flex-grow.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="flex-grow.css">
 </head>
+
 <body>
     <h1>Exemplo de flex-grow</h1>
     <p>
-        <span class="negrito">Como funciona ?</span>Se houver espaço extra no container, o valor de <code>flex-grow</code> defini a quantidade de espaço que cada item recebe proporcionalmente aos demais.Um item com <code>flex-grow: 2</code> terá o dobro de espaço que outro com <code>flex-grow: 1</code>.
+        <span class="negrito">Como funciona ?</span>Se houver espaço extra no container, o valor de
+        <code>flex-grow</code> defini a quantidade de espaço que cada item recebe proporcionalmente aos demais.Um item
+        com <code>flex-grow: 2</code> terá o dobro de espaço que outro com <code>flex-grow: 1</code>.
     </p>
 
     <main>
@@ -18,4 +22,5 @@
         <div class="item item-3">Item 3</div>
     </main>
 </body>
+
 </html>
